kubernetes/LAB/AKS-CustomNetwork/yaml/ingress-instance.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: azvote-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "instance.mycloud.com.br"
    http:
      paths:
      - backend:
          service:
            name: azure-instance
            port:
              number: 80
        path: /
        pathType: Prefix
